Fix resource paths in index.html
Updated file paths for CSS and image resources.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mc's Web</title>
-        <link rel="stylesheet" href="../static/css/styleweb.css" />
+        <link rel="stylesheet" href="static/css/styleweb.css" />
     </head>
 
     <body>
@@ -30,7 +30,7 @@
         </section>
 
         <section id="about" class="about fullpage">
-            <img src="../static/img/me.jpg" alt="Profile Picture" class="profile-pic" />
+            <img src="static/img/me.jpg" alt="Profile Picture" class="profile-pic" />
             <div class="about-text">
                 <h2>About Me</h2>
                 <p><strong>Name:</strong> Mc Lourence Omaque</p>
@@ -91,15 +91,15 @@
                             Instagram
                         </a>
                         <a href="https://facebook.com/mckyrence" target="_blank">
-                            <img src="../static/img/facebook.png" alt="Facebook" class="social-logo">
+                            <img src="static/img/facebook.png" alt="Facebook" class="social-logo">
                             Facebook
                         </a>
                         <a href="https://github.com/mckyskie" target="_blank">
-                            <img src="../static/img/github.png" alt="GitHub" class="social-logo">
+                            <img src="static/img/github.png" alt="GitHub" class="social-logo">
                             GitHub
                         </a>
                         <a href="https://www.tiktok.com/@mckyskieee?lang=en" target="_blank">
-                            <img src="../static/img/tiktok.png" alt="Tiktok" class="social-logo">
+                            <img src="static/img/tiktok.png" alt="Tiktok" class="social-logo">
                             Tiktok
                         </a>
                     </div>
@@ -121,7 +121,8 @@
             <p>© 2025 Mc Lourence Omaque | Made with ❤️</p>
         </footer>
 
-        <script src="../static/js/scriptweb.js"></script>
+        <script src="static/js/scriptweb.js"></script>
     </body>
 </html>
+
 
