Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h3>Follow Me</h3>
                     <div class="social-links">
                         <a href="https://instagram.com/mckyyy.kun" target="_blank">
-                            <img src="static/img/instagram.png" alt="Instagram" class="social-logo">
+                            <img src="/static/img/instagram.png" alt="Instagram" class="social-logo">
                             Instagram
                         </a>
                         <a href="https://facebook.com/mckyrence" target="_blank">
@@ -124,6 +124,7 @@
         <script src="static/js/scriptweb.js"></script>
     </body>
 </html>
+
 
 
 
