--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mc's Web</title>
+        <link rel="icon" href="static/img/mc.png" type="image/png">
         <link rel="stylesheet" href="static/css/styleweb.css" />
     </head>
 
@@ -124,6 +125,7 @@
         <script src="static/js/scriptweb.js"></script>
     </body>
 </html>
+
 
 
 
